test-cases/negative/test_045_invalid_indentation.lay
# negative test: invalid indentation in block
# expected: should handle or error

if true then
print 'should be indented'


